fix logo overlap by number

--- a/src/styles/blocks/icons.scss
+++ b/src/styles/blocks/icons.scss
@@ -17,37 +17,39 @@
     position: relative;
     background-image: url(../images/icons/icon-phone.svg);
 
-    &::before {
-      content: '+1 234 555-55-55';
+    @include on-desktop {
+      &::before {
+        content: '+1 234 555-55-55';
 
-      color: #000;
-      font-size: 12px;
-      line-height: 16px;
-      font-family: Inter, sans-serif;
-      letter-spacing: 2px;
-      text-decoration: none;
+        color: #000;
+        font-size: 12px;
+        line-height: 16px;
+        font-family: Inter, sans-serif;
+        letter-spacing: 2px;
+        text-decoration: none;
 
-      height: 100%;
-      text-wrap: nowrap;
-      width: fit-content;
+        height: 100%;
+        text-wrap: nowrap;
+        width: fit-content;
 
-      display: flex;
-      align-items: center;
+        display: flex;
+        align-items: center;
 
-      position: absolute;
-      right: calc(100% + 8px);
+        position: absolute;
+        right: calc(100% + 8px);
 
-      opacity: 0;
-      pointer-events: none;
-      transform: translate(-100%);
+        opacity: 0;
+        pointer-events: none;
+        transform: translate(-100%);
 
-      transition-duration: 0.3s;
-    }
+        transition-duration: 0.3s;
+      }
 
-    &:hover::before {
-      opacity: 1;
-      pointer-events: all;
-      transform: translate(0%);
+      &:hover::before {
+        opacity: 1;
+        pointer-events: all;
+        transform: translate(0%);
+      }
     }
   }
 
